--- a/ P13HTMLDOM/index.html
+++ b/ P13HTMLDOM/index.html
@@ -24,8 +24,9 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
+<button id="button0"> yesss </button>
+
   <script src="js/app.js"></script>
 
 </body>
