--- a/ P13HTMLDOM/index.html
+++ b/ P13HTMLDOM/index.html
@@ -25,8 +25,10 @@
 <body>
 
 
-<button id="button0"> yesss </button>
 
+
+<p id ="text"> Score: </p>
+<button id ="button0"></button>
   <script src="js/app.js"></script>
 
 </body>
