--- a/untitled/index.html
+++ b/untitled/index.html
@@ -24,14 +24,8 @@
 
 <body>
 
-
-
-
-
-
-
-
-
+  <!-- Add your site or application content here -->
+  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/app.js"></script>
 
 </body>
