--- a/ P13HTMLDOM/index.html
+++ b/ P13HTMLDOM/index.html
@@ -27,8 +27,8 @@
 
 
 
-<p id ="text"> Score: </p>
-<button id ="button0"></button>
+<p id ="text"> Score:0 </p>
+<button id ="button0">increase</button>
 
 
   <script src="js/app.js"></script>
