--- a/testing out spans /index.html
+++ b/testing out spans /index.html
@@ -24,8 +24,8 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+<p>Click on the <span id="clickableText" style="color: blue; cursor: pointer;">special word</span> to see a message!</p>
+
   <script src="js/app.js"></script>
 
 </body>
